--- a/traveltip.html
+++ b/traveltip.html
@@ -206,5 +206,9 @@
             }
         }
     </script>
+
+    <button>
+    <a href="/index.html" style="text-decoration: none; color: white;">BACK </a>
+</button>
 </body>
 </html>
