--- a/traveltips.html
+++ b/traveltips.html
@@ -377,5 +377,9 @@
             });
         });
     </script>
+
+    <button>
+    <a href="/index.html" style="text-decoration: none; color: white;">BACK </a>
+</button>
 </body>
 </html>
