--- a/home.html
+++ b/home.html
@@ -283,7 +283,7 @@
            </div>
        </div>
        <button>
-    <a href="/index.html" style="text-decoration: none; color: white;">BACK </a>
+    <a href="index.html" style="text-decoration: none; color: white;">BACK </a>
 </button>
     
        
