--- a/traveltip.html
+++ b/traveltip.html
@@ -208,7 +208,7 @@
     </script>
 
     <button>
-    <a href="/index.html" style="text-decoration: none; color: white;">BACK </a>
+    <a href="index.html" style="text-decoration: none; color: white;">BACK </a>
 </button>
 </body>
 </html>
