--- a/home.html
+++ b/home.html
@@ -204,7 +204,7 @@
                         <img src="images/goaa.png" alt="Goa">
                         <img src="images/punjab.png" alt="Punjab">
                         <img src="images/uttarpradesh.png" alt="Uttar Pradesh">
-                        <img src="images/himachalPradesh.png" alt="Himachal Pradesh">
+                        <img src="images/himachalpradesh.png" alt="Himachal Pradesh">
                         <img src="images/tamilnadu.png" alt="Tamil Nadu">
                         <img src="images/madhyapradesh.png" alt="Madhya Pradesh">
                         <img src="images/westbengal.png" alt="West Bengal">
